cadastro-de-uma-categoria e criacao-validador-generico implementados

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
 NotBlank.AutorRequest.nome = Nome é obrigatório sim senhor(a)
 #NotBlank.nome= Nome é obrigatório
 #NotBlank = Campo é obrigatório
+#UniqueValue =  nome já existe
